2008-11-23  Andreia Gaita  <shana@jitted.com>

	* Widget.cpp: Don't navigate to about:blank by default, there's no need, and
	this way we don't have to filter out events for this first load (and rendering
	content works even if there is no initial document, which was the whole point
	of this load anyway)

2008-11-23  Andreia Gaita  <shana@jitted.com>

	* Widget.cpp, BrowserWindow.*: Remove event listeners when shutting down.
	Call both XPCOMShutdown and GRE_Shutdown on xul 1.8 (this might fix #429453)

2008-11-22  Andreia Gaita  <shana@jitted.com>

	* Widget.*, gluezilla.*: Separate initialization in 3 stages so events
	  can be registered before the window is actually created

2008-11-13  Andreia Gaita  <shana@jitted.com>

	* BrowserWindow.cpp: Activate link hover status messages updates

2008-10-14  Andreia Gaita  <avidigal@novell.com>

	* Widget.h:
	* gluezilla.h:
	* gluezilla.cpp: Added method to retrieve a service manager pointer from
	the gui thread.

2008-09-10  Andreia Gaita <avidigal@novell.com> 

	* Widget.cpp, gtkWidget.cpp: Use the widget's destroy event to call the
	  quit routine.
	* gluezilla.cpp: Quit the main loop only instead of the entire app

2008-09-08  Andreia Gaita <avidigal@novell.com> 

	* gluezilla.cpp, gluezilla.h: Return the version of xulrunner that's
	  being used so I can distinguish which cache directory to use

2008-08-29  Andreia Gaita <avidigal@novell.com>

	* BrowserWindow.cpp, Widget.cpp, gluezilla.cpp: Check result codes
	from ns* calls and and bail out if they fail.

	* gluezilla.cpp: Addref document and webnavigation objects before
	returning them to managed land.

2008-08-29  Andreia Gaita <avidigal@novell.com>

	* LocationProvider.cpp: Force dynamic loader to use a specific
	minimum xulrunner version depending on which one it gets built with.

2008-08-07  Andreia Gaita <avidigal@novell.com> 

	* BrowserWindow.cpp: Remove cast macro calls that went walkies on gecko
	  1.9. EOL fixes.